<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.example.anshul.tourguide.PointsOfInterestActivity">

    <!-- Points of Interest category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historicalMonuments"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/historical_monuments"
            android:textColor="@color/white"/>
    </FrameLayout>

    <!-- Hotels category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/palaces"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/palaces"
            android:textColor="@color/white"/>
    </FrameLayout>

    <!-- Restaurants category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/religiousPlaces"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/religious_places"
            android:textColor="@color/white"/>
    </FrameLayout>

    <!-- Famous food category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/museumsPlanetarium"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/museums_planetarium"
            android:textColor="@color/white"/>
    </FrameLayout>

    <!-- Famous for category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hyderabadLakes"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/hyderabad_lakes"
            android:textColor="@color/white"/>
    </FrameLayout>

    <!-- MarketPlace category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/parksGardens"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/parks_gardens"
            android:textColor="@color/white"/>
    </FrameLayout>

    <!-- Malls category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wildlife"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/wildlife"
            android:textColor="@color/white"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/others"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/others"
            android:textColor="@color/white"/>
    </FrameLayout>

</LinearLayout>
